<resources>
    <string name="app_name">MovieAppMaster</string>
    <string name="Action_Setting">Setting</string>
    <string name="popular">Most Popular</string>
    <string name="refresh">Refresh</string>
    <string name="rate">Most Rated</string>
    <string name="release">RELEASE DATE</string>
    <string name="vote_average">7.3</string>
    <string name="contentDescription">Movie Image</string>
    <string name="trailerName">Trailer Number</string>
    <string name="release_date">2017-09-05</string>
    <string name="overview">In a small town in Maine, seven children known as The Losers Club come face to face with life problems.</string>
    <string name="resolution">720</string>
    <string name="ConError">Can not connect to internet , Check your internet connection</string>
    <string name="author_label">Author</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="trailers_Label">Trailers:</string>
    <string name="review">Skarsgård goes to hell and back to craft a truly malevolent creation, utterly believable as the black soul of King’s cursed small town</string>
    <string name="favorite">Favorite</string>
    <string name="review_label">Reviews:</string>
    <string name="seprateline">seprateline</string>
    <string name="favorite_star">favorite star</string>
    <string name="movieImage">Movie Image</string>
</resources>
